h1. CHANGELOG

h2. Version 0.1.4

* Added TypeSystem::Ruby::Boolean marker module

h2. Version 0.1.3

* Added TypeSystem abstraction

h2. Version 0.1.2

* AstNode
    ** coerce now supports Array literal as children.

h2. Version 0.1.1

* Name2X
    ** basic contract with name2module, name2class and name2name

* ProcParser
    ** an options hash is now supported on parse. When :multiline is set to true, the parser returns an array of AstNode, one for each line that has been parsed.

* AstNode
    ** <code>alias :produce :visit</code> removed
    ** AstNode is not Enumerable anymore
    ** #rename, #code_inject, #digest utilities added

* Producer
    ** add_extension utility added
    ** TracingMethods utilities added

h2. Version 0.1.0

* First official version with a working CodeTree package